--- a/lang/en.json
+++ b/lang/en.json
@@ -1,3 +1,56 @@
 {
-    
+    "Home": "Home",
+    "About Us": "About Us",
+    "Donations and Sponsorships": "Donations and Sponsorships",
+    "Title": "1453 Sokak Hayvanlarını Koruma ve Yaşatma Derneği",
+    "Description":"1453 Sokak Hayvanlarını Koruma ve Yaşatma Derneği, sokak hayvanlarının korunması, bakımı ve yaşatılmasını amaçlayan bir dernek olarak, hayvanlara daha iyi bir yaşam sağlamak için çalışmalar yürütmektedir. Bağış yaparak ve gönüllü olarak siz de destek olabilirsiniz.",
+    "1453 Street Animal Protection and Survival Association": "1453 Street Animal <span>Protection</span> and Survival Association",
+    "Founded with the goal of providing care and protection to street animals, the 1453 Street Animal Protection and Survival Association is dedicated to making a difference in the lives of stray and homeless animals. Our vision is to create a world where every animal is treated with love and compassion": "Founded with the goal of providing care and protection to street animals, the 1453 Street Animal Protection and Survival Association is dedicated to making a difference in the lives of stray and homeless animals. Our vision is to create a world where every animal is treated with love and compassion",
+    "Our Mission": "Our Mission",
+    "We rescue, rehabilitate, and provide medical care to animals in need. Through our efforts, we aim to reduce the number of stray animals and find them loving forever homes.":"We rescue, rehabilitate, and provide medical care to animals in need. Through our efforts, we aim to reduce the number of stray animals and find them loving forever homes.",
+    "Rescue & Rehabilitation":"Rescue & Rehabilitation",
+    "Adoption Programs":"Adoption Programs",
+    "Community Education":"Community Education",
+    "Help us save more lives and give these animals the love and care they deserve. Whether through adoption, fostering, or volunteering, you can make a real difference.":"Help us save more lives and give these animals the love and care they deserve. Whether through adoption, fostering, or volunteering, you can make a real difference.",
+    "Join Us":"Join Us",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":"",
+    "":""
+
 }
