--- a/lang/en.json
+++ b/lang/en.json
@@ -1,56 +1,70 @@
 {
-    "Home": "Home",
-    "About Us": "About Us",
-    "Donations and Sponsorships": "Donations and Sponsorships",
-    "Title": "1453 Sokak Hayvanlarını Koruma ve Yaşatma Derneği",
-    "Description":"1453 Sokak Hayvanlarını Koruma ve Yaşatma Derneği, sokak hayvanlarının korunması, bakımı ve yaşatılmasını amaçlayan bir dernek olarak, hayvanlara daha iyi bir yaşam sağlamak için çalışmalar yürütmektedir. Bağış yaparak ve gönüllü olarak siz de destek olabilirsiniz.",
+    "... Search Here ...": "... Search Here ...",
     "1453 Street Animal Protection and Survival Association": "1453 Street Animal <span>Protection</span> and Survival Association",
+    "About us": "About us",
+    "About Us": "About Us",
+    "Admin": "Admin",
+    "Adopt": "Adopt",
+    "Adopt Here": "Adopt Here",
+    "Adoption": "Adoption",
+    "Adoption Programs": "Adoption Programs",
+    "Be a Sponser": "Be a Sponser",
+    "Become a sponsor": "Become a sponsor",
+    "Best Service to Breeds Your Loved Dog Explore": "Best Service to Breeds Your Loved Dog Explore",
+    "Blog": "Blog",
+    "Community Education": "Community Education",
+    "Contact": "Contact",
+    "Contact Us": "Contact Us",
+    "copyright-text": "<p>Copyright © :year <a class=\"text-white\" href=\"https://apex8.io/\" target=\"_blank\">Apex8</a> . All Rights Reserved.</p>",
+    "Description": "1453 Sokak Hayvanlarını Koruma ve Yaşatma Derneği, sokak hayvanlarının korunması, bakımı ve yaşatılmasını amaçlayan bir dernek olarak, hayvanlara daha iyi bir yaşam sağlamak için çalışmalar yürütmektedir. Bağış yaparak ve gönüllü olarak siz de destek olabilirsiniz.",
+    "Dog Breeding": "Dog Breeding",
+    "Dog List": "Dog List",
+    "dogs are first bred": "dogs are first bred",
+    "Don’t show your email address": "Don’t show your email address",
+    "Donate": "Donate",
+    "Donations and Sponsorships": "Donations and Sponsorships",
+    "Donations And Sponsorships": "Donations And Sponsorships",
+    "Donations are used to meet the health needs of street animals, provide vaccinations, spay or neuter them, and ensure they have safe homes. They are also spent on supporting the adoption processes and conducting volunteer activities.": "Donations are used to meet the health needs of street animals, provide vaccinations, spay or neuter them, and ensure they have safe homes. They are also spent on supporting the adoption processes and conducting volunteer activities.",
+    "Every day, our furry friends on the streets struggle to survive and need your help. Be their hope by adopting or sponsoring, and make a difference in their lives!": "Every day, our furry friends on the streets struggle to survive and need your help. Be their hope by adopting or sponsoring, and make a difference in their lives!",
+    "Every day, stray dogs face hunger, fear, and uncertainty. But with your help, we can change that. By donating, you provide food, medical care, and a safe place for these dogs to heal and find loving homes.": "Every day, stray dogs face hunger, fear, and uncertainty. But with your help, we can change that. By donating, you provide food, medical care, and a safe place for these dogs to heal and find loving homes.",
+    "FAQ Question": "FAQ Question",
     "Founded with the goal of providing care and protection to street animals, the 1453 Street Animal Protection and Survival Association is dedicated to making a difference in the lives of stray and homeless animals. Our vision is to create a world where every animal is treated with love and compassion": "Founded with the goal of providing care and protection to street animals, the 1453 Street Animal Protection and Survival Association is dedicated to making a difference in the lives of stray and homeless animals. Our vision is to create a world where every animal is treated with love and compassion",
+    "Help us save more lives and give these animals the love and care they deserve. Whether through adoption, fostering, or volunteering, you can make a real difference.": "Help us save more lives and give these animals the love and care they deserve. Whether through adoption, fostering, or volunteering, you can make a real difference.",
+    "Home": "Home",
+    "How are donations used?": "How are donations used?",
+    "How does the adoption process work?": "How does the adoption process work?",
+    "Instead of paying online, you can use our bank accounts below. Please do not forget to make a payment notification after payment.": "Instead of paying online, you can use our bank accounts below. Please do not forget to make a payment notification after payment.",
+    "Join Us": "Join Us",
+    "Jon Deo...": "Jon Deo...",
+    "Make a donation": "Make a donation",
+    "Meet the animals": "Meet the animals",
+    "Most dogs are first": "Most dogs are first",
+    "Next": "Next",
+    "Opinion...": "Opinion...",
+    "Our Bank Accounts": "Our Bank Accounts",
+    "Our Friends Waiting for Adoption or Sponsorship": "Our Friends Waiting for Adoption or Sponsorship",
     "Our Mission": "Our Mission",
-    "We rescue, rehabilitate, and provide medical care to animals in need. Through our efforts, we aim to reduce the number of stray animals and find them loving forever homes.":"We rescue, rehabilitate, and provide medical care to animals in need. Through our efforts, we aim to reduce the number of stray animals and find them loving forever homes.",
-    "Rescue & Rehabilitation":"Rescue & Rehabilitation",
-    "Adoption Programs":"Adoption Programs",
-    "Community Education":"Community Education",
-    "Help us save more lives and give these animals the love and care they deserve. Whether through adoption, fostering, or volunteering, you can make a real difference.":"Help us save more lives and give these animals the love and care they deserve. Whether through adoption, fostering, or volunteering, you can make a real difference.",
-    "Join Us":"Join Us",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":"",
-    "":""
-
+    "Questions You Might Find Interesting": "Questions You Might Find Interesting",
+    "Rescue & Rehabilitation": "Rescue & Rehabilitation",
+    "Send Now": "Send Now",
+    "slider-desc": "You can make a big difference in the life of a stray animal by giving them a home.<br /> Share your love, gain a new friend, and create unforgettable memories together.",
+    "slider-title": "Every animal needs <span>love</span>, and every person needs a <span>friend</span>.",
+    "Sponsoring an animal means providing regular or one-time financial support to cover that animal’s care and health expenses. Sponsors play an important role in helping meet the animal's needs and moving it toward a better future.": "Sponsoring an animal means providing regular or one-time financial support to cover that animal’s care and health expenses. Sponsors play an important role in helping meet the animal's needs and moving it toward a better future.",
+    "The adoption process begins with interested individuals filling out an application form. After your application is reviewed, an interview is conducted, and a visit is arranged for suitable animals. Once approved, the adoption procedures for the animal are completed.": "The adoption process begins with interested individuals filling out an application form. After your application is reviewed, an interview is conducted, and a visit is arranged for suitable animals. Once approved, the adoption procedures for the animal are completed.",
+    "The domestic dog is a doiated dendant of the wolf. The dog derived from an ancient, extinct wolf, and the modern grey.": "The domestic dog is a doiated dendant of the wolf. The dog derived from an ancient, extinct wolf, and the modern grey.",
+    "These animals are waiting for a loving family and a safe home. Each of them is eager for a chance to start anew in their lives. By adopting or sponsoring them, you can seize the opportunity to change their lives. Take the first step to gain a new friend or bring hope to an animal!": "These animals are waiting for a loving family and a safe home. Each of them is eager for a chance to start anew in their lives. By adopting or sponsoring them, you can seize the opportunity to change their lives. Take the first step to gain a new friend or bring hope to an animal!",
+    "Title": "1453 Sokak Hayvanlarını Koruma ve Yaşatma Derneği",
+    "View More": "View More",
+    "W84 New Park Lan, New York, NY 4586 United States": "W84 New Park Lan, New York, NY 4586 United States",
+    "We rescue, rehabilitate, and provide medical care to animals in need. Through our efforts, we aim to reduce the number of stray animals and find them loving forever homes.": "We rescue, rehabilitate, and provide medical care to animals in need. Through our efforts, we aim to reduce the number of stray animals and find them loving forever homes.",
+    "What does sponsoring an animal mean?": "What does sponsoring an animal mean?",
+    "Why Choose Us?": "Why Choose Us?",
+    "Working For Dog Adoption": "Working For Dog Adoption",
+    "Years Of History": "Years Of History",
+    "You can bring <span>Hope</span> to our furry friends on the streets!": "You can bring <span>Hope</span> to our furry friends on the streets!",
+    "You Can Make a Difference in the Lives of Dogs": "You Can Make a Difference in the Lives of Dogs",
+    "Your Email": "Your Email",
+    "Your kindness transforms lives. With every donation, you give a dog a second chance at happiness. You have the power to make a real difference—help a stray dog today and be the reason their tail wags again.": "",
+    "Your Message": "Your Message",
+    "Your Name": "Your Name"
 }
