--- a/lang/tr.json
+++ b/lang/tr.json
@@ -1,16 +1,70 @@
 {
-    "Home": "Anasayfa",
+    "... Search Here ...": "... Burada Arayın ...",
+    "1453 Street Animal Protection and Survival Association": "1453 Sokak Hayvanlarını Koruma ve Yaşatma Derneği",
+    "About us": "Hakkımızda",
     "About Us": "Hakkımızda",
-    "Donations and Sponsorships": "Bağışlar ve Sponsorlar",
-    "Title": "1453 Sokak Hayvanlarını Koruma ve Yaşatma Derneği",
-    "Description": "1453 Sokak Hayvanlarını Koruma ve Yaşatma Derneği, sokak hayvanlarının korunması, bakımı ve yaşatılmasını amaçlayan bir dernek olarak, hayvanlara daha iyi bir yaşam sağlamak için çalışmalar yürütmektedir. Bağış yaparak ve gönüllü olarak siz de destek olabilirsiniz.",
-    "1453 Street Animal Protection and Survival Association": "1453 Sokak Hayvanlarını <span>Koruma</span> ve Yaşatma Derneği",
-    "Founded with the goal of providing care and protection to street animals, the 1453 Street Animal Protection and Survival Association is dedicated to making a difference in the lives of stray and homeless animals. Our vision is to create a world where every animal is treated with love and compassion": "Sokak hayvanlarına bakım ve koruma sağlama amacıyla kurulan 1453 Sokak Hayvanlarını Koruma ve Yaşatma Derneği, sokak hayvanlarının hayatlarında fark yaratmaya kendini adamıştır. Vizyonumuz, her hayvanın sevgi ve merhametle muamele gördüğü bir dünya yaratmaktır.",
-    "Our Mission": "Misyonumuz",
-    "We rescue, rehabilitate, and provide medical care to animals in need. Through our efforts, we aim to reduce the number of stray animals and find them loving forever homes.": "İhtiyaç sahibi hayvanları kurtarıyor, rehabilite ediyor ve tıbbi bakım sağlıyoruz. Çabalarımızla sokak hayvanlarının sayısını azaltmayı ve onlara sevgi dolu kalıcı yuvalar bulmayı amaçlıyoruz.",
-    "Rescue & Rehabilitation": "Kurtarma ve Rehabilitasyon",
-    "Adoption Programs": "Sahiplendirme Programları",
+    "Admin": "Yönetici",
+    "Adopt": "Sahiplen",
+    "Adopt Here": "Buradan Sahiplen",
+    "Adoption": "Sahiplenme",
+    "Adoption Programs": "Sahiplenme Programları",
+    "Be a Sponser": "Sponsor Ol",
+    "Become a sponsor": "Sponsor Olun",
+    "Best Service to Breeds Your Loved Dog Explore": "Sevdiğiniz Köpeğinize En İyi Hizmeti Sunun",
+    "Blog": "Blog",
     "Community Education": "Toplumsal Eğitim",
-    "Help us save more lives and give these animals the love and care they deserve. Whether through adoption, fostering, or volunteering, you can make a real difference.": "Daha fazla hayat kurtarmamıza ve bu hayvanlara hak ettikleri sevgi ve bakımı sağlamamıza yardımcı olun. İster sahiplenme, ister geçici yuva sağlama veya gönüllü çalışma yoluyla gerçek bir fark yaratabilirsiniz.",
-    "Join Us": "Bize Katılın"
+    "Contact": "İletişim",
+    "Contact Us": "Bize Ulaşın",
+    "copyright-text": "<p>Telif Hakkı © :year <a class=\"text-white\" href=\"https://apex8.io/\" target=\"_blank\">Apex8</a> . Tüm Hakları Saklıdır.</p>",
+    "Description": "1453 Sokak Hayvanlarını Koruma ve Yaşatma Derneği, sokak hayvanlarının korunması, bakımı ve yaşatılmasını amaçlayan bir dernek olarak, hayvanlara daha iyi bir yaşam sağlamak için çalışmalar yürütmektedir. Bağış yaparak ve gönüllü olarak siz de destek olabilirsiniz.",
+    "Dog Breeding": "Köpek Yetiştiriciliği",
+    "Dog List": "Köpek Listesi",
+    "dogs are first bred": "köpekler önce yetiştirilir",
+    "Don’t show your email address": "E-posta adresinizi göstermeyin",
+    "Donate": "Bağış Yap",
+    "Donations and Sponsorships": "Bağışlar ve Sponsorluklar",
+    "Donations And Sponsorships": "Bağışlar ve Sponsorlar",
+    "Donations are used to meet the health needs of street animals, provide vaccinations, spay or neuter them, and ensure they have safe homes. They are also spent on supporting the adoption processes and conducting volunteer activities.": "Bağışlar, sokak hayvanlarının sağlık ihtiyaçlarını karşılamak, aşılarını sağlamak, kısırlaştırmak ve güvenli yuvalara sahip olmalarını sağlamak için kullanılmaktadır. Ayrıca sahiplenme süreçlerini desteklemek ve gönüllü faaliyetler yürütmek için harcanmaktadır.",
+    "Every day, our furry friends on the streets struggle to survive and need your help. Be their hope by adopting or sponsoring, and make a difference in their lives!": "Her gün, sokaktaki dostlarımız hayatta kalmak için mücadele ediyor ve sizin yardımınıza ihtiyaçları var. Onların umudu olun, sahiplenin veya sponsor olun ve hayatlarında bir fark yaratın!",
+    "Every day, stray dogs face hunger, fear, and uncertainty. But with your help, we can change that. By donating, you provide food, medical care, and a safe place for these dogs to heal and find loving homes.": "Her gün, sokak köpekleri açlık, korku ve belirsizlikle karşı karşıya kalıyor. Ancak sizin yardımınızla bunu değiştirebiliriz. Bağış yaparak bu köpeklere yiyecek, tıbbi bakım ve güvenli bir yer sağlayabilir ve onlara sevgi dolu yuvalar bulabiliriz.",
+    "FAQ Question": "SSS Soru",
+    "Founded with the goal of providing care and protection to street animals, the 1453 Street Animal Protection and Survival Association is dedicated to making a difference in the lives of stray and homeless animals. Our vision is to create a world where every animal is treated with love and compassion": "Sokak hayvanlarına bakım ve koruma sağlama amacıyla kurulan 1453 Sokak Hayvanlarını Koruma ve Yaşatma Derneği, sokak ve evsiz hayvanların hayatında bir fark yaratmaya kendini adamıştır. Vizyonumuz, her hayvanın sevgi ve merhametle muamele gördüğü bir dünya yaratmaktır.",
+    "Help us save more lives and give these animals the love and care they deserve. Whether through adoption, fostering, or volunteering, you can make a real difference.": "Daha fazla hayat kurtarmamıza yardımcı olun ve bu hayvanlara hak ettikleri sevgi ve bakımı sağlayın. Sahiplenerek, koruyucu aile olarak veya gönüllü olarak gerçek bir fark yaratabilirsiniz.",
+    "Home": "Ana Sayfa",
+    "How are donations used?": "Bağışlar nasıl kullanılır?",
+    "How does the adoption process work?": "Sahiplenme süreci nasıl işler?",
+    "Instead of paying online, you can use our bank accounts below. Please do not forget to make a payment notification after payment.": "Çevrimiçi ödeme yapmak yerine aşağıdaki banka hesaplarımızı kullanabilirsiniz. Ödeme yaptıktan sonra ödeme bildiriminde bulunmayı unutmayın.",
+    "Join Us": "Bize Katılın",
+    "Jon Deo...": "Jon Deo...",
+    "Make a donation": "Bağış Yap",
+    "Meet the animals": "Hayvanlarla Tanışın",
+    "Most dogs are first": "Çoğu köpek önce",
+    "Next": "İlerle",
+    "Opinion...": "Görüş...",
+    "Our Bank Accounts": "Banka Hesaplarımız",
+    "Our Friends Waiting for Adoption or Sponsorship": "Sahiplenme veya Sponsor Bekleyen Dostlarımız",
+    "Our Mission": "Misyonumuz",
+    "Questions You Might Find Interesting": "İlginç Bulabileceğiniz Sorular",
+    "Rescue & Rehabilitation": "Kurtarma ve Rehabilitasyon",
+    "Send Now": "Gönder",
+    "slider-desc": "Bir sokak hayvanına yuva sağlayarak hayatında büyük bir fark yaratabilirsiniz.<br /> Sevginizi paylaşın, yeni bir dost kazanın ve birlikte unutulmaz anılar biriktirin.",
+    "slider-title": "Her hayvanın <span>sevgiye</span>, her insanın ise bir <span>dosta</span> ihtiyacı var.",
+    "Sponsoring an animal means providing regular or one-time financial support to cover that animal’s care and health expenses. Sponsors play an important role in helping meet the animal's needs and moving it toward a better future.": "Bir hayvana sponsor olmak, onun bakım ve sağlık giderlerini karşılamak için düzenli veya tek seferlik maddi destek sağlamaktır. Sponsorlar, hayvanın ihtiyaçlarının karşılanmasına ve daha iyi bir geleceğe yönelmesine önemli bir katkıda bulunur.",
+    "The adoption process begins with interested individuals filling out an application form. After your application is reviewed, an interview is conducted, and a visit is arranged for suitable animals. Once approved, the adoption procedures for the animal are completed.": "Sahiplenme süreci, ilgilenen bireylerin bir başvuru formu doldurmasıyla başlar. Başvurunuz incelendikten sonra bir görüşme yapılır ve uygun hayvanlar için bir ziyaret düzenlenir. Onaylandıktan sonra hayvanın sahiplenme işlemleri tamamlanır.",
+    "The domestic dog is a doiated dendant of the wolf. The dog derived from an ancient, extinct wolf, and the modern grey.": "Evcil köpek, bir kurdun soyundan gelen bir türdür. Köpekler, antik, soyu tükenmiş bir kurttan ve modern gri kurttan türemiştir.",
+    "These animals are waiting for a loving family and a safe home. Each of them is eager for a chance to start anew in their lives. By adopting or sponsoring them, you can seize the opportunity to change their lives. Take the first step to gain a new friend or bring hope to an animal!": "Bu hayvanlar sevgi dolu bir aile ve güvenli bir yuva bekliyor. Her biri hayatlarına yeni bir başlangıç yapma şansını arıyor. Onları sahiplenerek veya sponsor olarak, hayatlarını değiştirme fırsatını yakalayabilirsiniz. Yeni bir dost edinmek veya bir hayvana umut olmak için ilk adımı atın!",
+    "Title": "1453 Sokak Hayvanlarını Koruma ve Yaşatma Derneği",
+    "View More": "Daha Fazla Gör",
+    "W84 New Park Lan, New York, NY 4586 United States": "W84 New Park Lan, New York, NY 4586 Amerika Birleşik Devletleri",
+    "We rescue, rehabilitate, and provide medical care to animals in need. Through our efforts, we aim to reduce the number of stray animals and find them loving forever homes.": "İhtiyaç sahibi hayvanları kurtarıyor, rehabilite ediyor ve tıbbi bakım sağlıyoruz. Çabalarımızla sokak hayvanlarının sayısını azaltmayı ve onlara kalıcı sevgi dolu yuvalar bulmayı hedefliyoruz.",
+    "What does sponsoring an animal mean?": "Bir hayvana sponsor olmak ne anlama gelir?",
+    "Why Choose Us?": "Neden Bizi Seçmelisiniz?",
+    "Working For Dog Adoption": "Köpek Sahiplenme İçin Çalışıyoruz",
+    "Years Of History": "Yılların Deneyimi",
+    "You can bring <span>Hope</span> to our furry friends on the streets!": "Sokaktaki tüylü dostlarımıza <span>Umut</span> olabilirsiniz!",
+    "You Can Make a Difference in the Lives of Dogs": "Köpeklerin Hayatında Fark Yaratabilirsiniz",
+    "Your Email": "E-posta Adresiniz",
+    "Your kindness transforms lives. With every donation, you give a dog a second chance at happiness. You have the power to make a real difference—help a stray dog today and be the reason their tail wags again.": "Nezaketiniz hayatları değiştirir. Her bağışla bir köpeğe mutluluk için ikinci bir şans verirsiniz. Gerçek bir fark yaratma gücünüz var—bugün bir sokak köpeğine yardım edin ve kuyruklarının yeniden sallanmasının nedeni olun.",
+    "Your Message": "Mesajınız",
+    "Your Name": "Adınız"
 }
